# event_detector

./: .gitlab-ci.yml  .repos  AnalysisManager_8hpp_source.html  AnalysisRule_8hpp_source.html  BufferManager_8hpp_source.html  CITATION.cff  DifferenceBasedBuffer_8hpp_source.html  EventDetector_8hpp_source.html  README.md  annotated.html  classDifferenceBasedBuffer-members.html  classDifferenceBasedBuffer.html  classes.html  classevent__detector_1_1AnalysisManager-members.html  classevent__detector_1_1AnalysisManager.html  classevent__detector_1_1AnalysisRule-members.html  classevent__detector_1_1AnalysisRule.html  classevent__detector_1_1BufferManager-members.html  classevent__detector_1_1BufferManager.html  classevent__detector_1_1BufferManager_1_1DataBuffers-members.html  classevent__detector_1_1BufferManager_1_1DataBuffers.html  classevent__detector_1_1EventDetector-members.html  classevent__detector_1_1EventDetector.html  common_8hpp_source.html  datatypes_8hpp_source.html  dir_45e9e2f5f75be564e0fcdd7681b8195d.html  dir_9cb84cf9fbd90bf50452964cab2d6800.html  dir_cf052fa62138bd34ba125375c9d02dea.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js  namespaceevent__detector.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  structevent__detector_1_1ClientConnection-members.html  (+5 more)
.github/workflows/: docker-ros.yml
doc/: Doxyfile
event_detector/: CMakeLists.txt  package.xml
event_detector/config/: params.yml
event_detector/include/event_detector/: AnalysisManager.hpp  AnalysisRule.hpp  AnalysisRule.tpp  BufferManager.hpp  BufferManager.tpp  DifferenceBasedBuffer.hpp  DifferenceBasedBuffer.tpp  EventDetector.hpp  EventDetector.tpp  common.hpp  common.tpp  datatypes.hpp  datatypes.macro
event_detector/launch/: event_detector.launch.py
event_detector/src/: AnalysisManager.cpp  AnalysisRule.cpp  BufferManager.cpp  EventDetector.cpp
event_detector/test/: buffer_benchmark.cpp  buffer_test.cpp
event_detector/test/sample_pointcloud/: metadata.yaml  rosbag2_2023_10_09-15_04_41_0.db3
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+25 more)
